2015-07-06  Mikael Magnusson  <mikachu@gmail.com>

	* 35696: Completion/Unix/Type/_ps1234: complete colors for %F{
	and %K{

	* 35697: Completion/Unix/Type/_date_formats,
	Completion/Unix/Type/_ps1234: Complete strftime formats for %D{}

2015-07-06  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 35441: Etc/zsh-development-guide: Make devs' ChangeLog
	generator scripts discoverable

2015-07-05  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 35692: Src/Zle/computil.c: cfp_matcher_range used wrong raw
	character if it couldn't be converted to wchar_t.

	* 35688: Src/text.c: Slightly more nearly definitive version of
	turning wordcode case statements back to text.

2015-07-04  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 35682: Src/text.c, plus Test/A01grammar.ztst: turning case
	statements parsed as multiple alternatives back into text.

2015-07-03  Oliver Kiddle  <opk@zsh.org>

	* 35681: Src/Modules/datetime.c: fix day of month initialisation

	* 35674: Src/Zle/zle_main.c: make an undo event for
	initial buffer contents

2015-07-03  Mikael Magnusson  <mikachu@gmail.com>

	* 35673: Completion/Zsh/Function/_zargs: Improve _zargs

2015-07-02  Peter Stephenson  <p.stephenson@samsung.com>

	* Han Pingtian: 35665: Src/Zle/complete.c: better error handling
	for command line match processing.

	* Eric Cook: 35663: Completion/Unix/Command/_zpool: fix for
	changed interface.

	* 35668: Src/input.c, Src/lex.c, Src/zsh.h,
	Test/D03procsubst.ztst: replacement for 35667:
	use input flag to stop unwanted backtracking,
	additional test.

2015-07-01  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 35667: Src/lex.c, Src/zsh.h, Test/D03procsubst.ztst,
	Test/D08cmdsubst.ztst: fix command expansion which
	starts but does not finish within alias.

2015-06-29  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Doc/Zsh/options.yo: fix formatting typo.

	* 35655: Doc/Zsh/options.yo, Src/exec.c, Src/options.c,